@@ -1,5 +1,5 @@
 /* xexit.c -- exit with attention to return values and closing stdout.
-   $Id: xexit.c,v 1.3 2003-05-18 20:01:51 karl Exp $
+   $Id: xexit.c,v 1.4 2003-05-19 13:10:59 karl Exp $
 
    Copyright (C) 1999, 2003 Free Software Foundation, Inc.
 
@@ -41,8 +41,10 @@
 #endif /* not EXIT_SUCCESS */
 
 
-/* Flush stdout first, exit if failure.  Otherwise, if EXIT_STATUS is
-   zero, exit successfully, else unsuccessfully.  */
+/* Flush stdout first, exit if failure (therefore, xexit should be
+   called to exit every program, not just `return' from main).
+   Otherwise, if EXIT_STATUS is zero, exit successfully, else
+   unsuccessfully.  */
 
 void
 xexit (exit_status)
@@ -50,12 +52,12 @@ xexit (exit_status)
 {
   if (ferror (stdout))
     {
-      fputs (stderr, _("ferror on stdout"));
+      fputs (_("ferror on stdout\n"), stderr);
       exit_status = 1;
     }
   else if (fflush (stdout) != 0)
     {
-      fputs (stderr, _("fflush error on stdout"));
+      fputs (_("fflush error on stdout\n"), stderr);
       exit_status = 1;
     }
 
